--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "nodemon": "^1.12.1"
   },
   "devDependencies": {
